[package]
name = "rs2"
version = "0.1.0"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[profile.release]
lto = "thin"
codegen-units = 1
target-cpu = "native"
panic = "abort"

[dependencies]
bitflags = "1"
byteorder = "1"
enum_primitive = "0.1"
env_logger = "0.7"
log = "0.4"

[dependencies.rs2_macro]
path = "./rs2_macro"